 =======================================================================
 ==CHANGES.txt
 =======================================================================

Current Development 0.6-SNAPSHOT
 
* GORA-381 Fix Guava dependency mismatch post GoraCI (lewismc)

* GORA-374 Implement Rackspace Cloud Orchestration in GoraCI (lewismc)

* GORA-371 Exception setXIncludeAware UnsupportedOperationException (Viacheslav Dobromyslov (dobromyslov) via lewismc)

* GORA-378 Log error trace as well as error message in GoraRecordWriter (lewismc)

* GORA-376 Gora Cassandra doesn't accept user credentials for connection (Viju Kothuvatiparambil via lewismc) 

* GORA-372: Fixed runtime error with the slf4j-api version conflict. (Viacheslav Dobromyslov (dobromyslov) via hsaputra)

Apache Gora 0.5 Release - 15/09/14
Release Report - http://s.apache.org/0.5report

* GORA-369 Obtain consistent formatting of all pom.xml's (lewismc)

* GORA-346 Create shim layer to support multiple hadoop versions (Moritz Hoffmann, rmarroquin, hsaputra, Mikhail Bernadsky via lewismc)

* GORA-73 Merge goraci testing suite with master branch (kturner, enis via lewismc)

* GORA-353 Accumulo authentication token serialized incorrectly (Chin Huang via lewismc)

* GORA-167 forward port of Make Cassandra keyspace consistency configurable within gora.properties (rmarroquin via lewismc)

* GORA-364 MemStore.get fails with NPE when key is not set (Gerhard Gossen via lewismc)

* GORA-361 AvroUtils.deepClonePersistent needs to flush BinaryEncoder (Gerhard Gossen via hsaputra)

* GORA-351 Multiple Slf4j logging implementations in parent pom.xml (lewismc)

* GORA-234 Javadoc and java annotations in gora-core base (abstract) classes needs to be corrected (tpalsulich via lewismc)

* GORA-349 Update Datastore specific mapping documentation with new default root element (MJJoyce) via lewismc

* GORA-241 Properly document WebServiceBackedDataStore Interface (Tyler Palsulich)
