@@ -3,6 +3,8 @@
  =======================================================================
 
 Current Development 0.6-SNAPSHOT
+
+* GORA-388 MongoStore: Fix handling of Utf8 in filters (drazzib)
  
 * GORA-381 Fix Guava dependency mismatch post GoraCI (lewismc)
 
